--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -9,3 +9,10 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.template.exchange=
