--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,16 +1,7 @@
 spring.application.name=microventa
 server.port=8082
 
-spring.datasource.url=jdbc:oracle:thin:@bdfullstack3_high?TNS_ADMIN=/app/wallet
-spring.datasource.username=micro_user
-spring.datasource.password=MicroPass123
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-
-
+# RabbitMQ
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
